<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/mainNavDrawGrp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainNavDrawProfile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/mainNavDrawFollowers"
            android:title="@string/followers"/>
        <item
            android:id="@+id/mainNavDrawMeetings"
            android:title="@string/meetings"
            />
        <item
            android:id="@+id/mainNavDrawContests"
            android:title="@string/contests"
            />
        <item
            android:id="@+id/mainNavDrawUserList"
            android:title="@string/users"/>
    </group>
    <group
        android:id="@+id/mainNavDrawGrp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainNavDrawSettings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/settings"/>

    </group>
    <item
        android:id="@+id/mainNavDrawContact"
        android:title="@string/contact_us"/>
    <item
        android:id="@+id/mainNavDrawLogout"
        android:title="@string/logout"/>
</menu>