package com.github.sdp_begreen.begreen.activities

import android.Manifest.permission.*
import android.graphics.Bitmap
import android.graphics.BitmapFactory
import android.graphics.drawable.BitmapDrawable
import android.widget.ImageView
import androidx.activity.viewModels
import androidx.core.view.GravityCompat
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.DrawerActions
import androidx.test.espresso.contrib.DrawerMatchers
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intended
import androidx.test.espresso.intent.matcher.IntentMatchers.*
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.GrantPermissionRule
import com.github.sdp_begreen.begreen.R
import com.github.sdp_begreen.begreen.espressoUtils.BaseRobot
import com.github.sdp_begreen.begreen.firebase.Auth
import com.github.sdp_begreen.begreen.firebase.DB
import com.github.sdp_begreen.begreen.firebase.RootPath
import com.github.sdp_begreen.begreen.firebase.eventServices.EventParticipantService
import com.github.sdp_begreen.begreen.firebase.eventServices.EventService
import com.github.sdp_begreen.begreen.fragments.SendPostFragment
import com.github.sdp_begreen.begreen.map.Bin
import com.github.sdp_begreen.begreen.matchers.EqualsToBitmap.Companion.equalsBitmap
import com.github.sdp_begreen.begreen.models.CustomLatLng
import com.github.sdp_begreen.begreen.models.ProfilePhotoMetadata
import com.github.sdp_begreen.begreen.models.TrashCategory
import com.github.sdp_begreen.begreen.models.TrashPhotoMetadata
import com.github.sdp_begreen.begreen.models.User
import com.github.sdp_begreen.begreen.models.event.Contest
import com.github.sdp_begreen.begreen.models.event.Meeting
import com.github.sdp_begreen.begreen.rules.KoinTestRule
import com.github.sdp_begreen.begreen.services.GeocodingService
import com.github.sdp_begreen.begreen.viewModels.ConnectedUserViewModel
import com.google.android.gms.tasks.Tasks
import com.google.firebase.database.DatabaseException
import kotlinx.coroutines.*
import kotlinx.coroutines.flow.*
import kotlinx.coroutines.test.runTest
import org.hamcrest.CoreMatchers.*
import org.junit.BeforeClass
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.dsl.module
import org.mockito.Mockito.mock
import org.mockito.kotlin.*

@OptIn(ExperimentalCoroutinesApi::class)
@RunWith(AndroidJUnit4::class)
@LargeTest
class MainActivityTest {

    /**
     * Initialize some constant to use in tests
     */
    companion object {
        private val profilePhotoMetadata = ProfilePhotoMetadata("user1_profile_picture")
        private val trashPhotoMetadata = TrashPhotoMetadata("123", takenBy = "1234")
        private const val userId1 = "1234"
        private const val userId2 = "1235"
        private const val userId3 = "1236"
        private const val userId4 = "1237"
        private const val userIdA = "A"
        private const val userIdB = "B"
        private const val userIdC = "C"
        private const val userIdD = "D"

        private val user1 = User(
            userId1,
            12,
            "User 1",
            "user 1 description",
            "123456789",
            "user1@email.com",
            profilePictureMetadata = profilePhotoMetadata
        )
        private val user2 = User(
            userId2,
            12,
            "User 2",
            description = "user 2 description"
        )

        private val user3 = User(userId3, 10)
        private val fakePicture1 = Bitmap.createBitmap(120, 120, Bitmap.Config.ARGB_8888)
        private val db: DB = mock(DB::class.java)
        private val auth: Auth = mock(Auth::class.java)
        private val eventService: EventService = mock(EventService::class.java)
        private val participantService: EventParticipantService =
            mock(EventParticipantService::class.java)
        private val geocodingService: GeocodingService = mock(GeocodingService::class.java)

        // initially do as if no user were signed in
        private val authUserFlow = MutableStateFlow<String?>(null)
        private val bins = listOf(
            Bin("1", TrashCategory.CLOTHES, 4.3, 2.8),
            Bin("2", TrashCategory.PAPER, 56.3, 22.3),
            Bin("3", TrashCategory.CLOTHES, 6.0, 9.0)
        )

        private val customLatLng = CustomLatLng(46.519653, 6.632273)

        @BeforeClass
        @JvmStatic
        fun setUp() {
            // The implementation need to be provided before the rule is executed,
            // that's why we do it in the beforeClass method
            runTest {

                // setup basic get user and getProfilePicture use in multiple tests
                whenever(db.getUser(userId1)).thenReturn(user1)
                whenever(db.getImage(trashPhotoMetadata)).thenReturn(fakePicture1)
                whenever(db.getUserProfilePicture(profilePhotoMetadata, userId1))
                    .thenReturn(fakePicture1)
                // add a small delay, just to be sure that it is triggered after initialization
                // and arrive second, after the initial null value
                // use a mutable state flow, so that we can easily simulate different authenticated
                // user between tests, by simply pushing a new userId
                whenever(auth.getFlowUserIds())
                    .thenReturn(authUserFlow.onEach { delay(10) })
                whenever(auth.getConnectedUserId())
                    .thenReturn("current user id")

                whenever(db.getAllUsers()).thenReturn(listOf(user1))
                whenever(db.getAllBins()).thenReturn(bins)
                whenever(
                    eventService.getAllEvents(
                        RootPath.MEETINGS,
                        Meeting::class.java
                    )
                ).thenReturn(flowOf())
                whenever(
                    eventService.getAllEvents(
                        RootPath.CONTESTS,
                        Contest::class.java
                    )
                ).thenReturn(flowOf())
                whenever(db.getFollowers("current user id")).thenReturn(listOf())
                whenever(db.getFollowedIds("current user id")).thenReturn(listOf())

                whenever(eventService.createEvent<Contest>(any())).thenReturn(null)

                whenever(geocodingService.getLongLat(any())).thenReturn(
                    customLatLng
                )
            }
        }
    }

    @get:Rule
    val activityRule = ActivityScenarioRule(MainActivity::class.java)

    @get:Rule
    val koinTestRule = KoinTestRule(
        modules = listOf(module {
            single { db }
            single { auth }
            single { eventService }
            single { participantService }
            single { geocodingService }
        })
    )

    // Need permission for camera when testing launching profile fragment
    @get:Rule
    val permissionRule: GrantPermissionRule = GrantPermissionRule.grant(CAMERA)

    @get:Rule
    val fineLocationPermissionRule: GrantPermissionRule =
        GrantPermissionRule.grant(ACCESS_FINE_LOCATION)

    @get:Rule
    val coarseLocationPermissionRule: GrantPermissionRule =
        GrantPermissionRule.grant(ACCESS_COARSE_LOCATION)

    @Test
    fun bottomNavigationBarVisible() {
        onView(withId(R.id.mainNavigationView)).check(matches(isDisplayed()))
    }

    @Test
    fun defaultDisplayedFragmentIsCamera() {
        onView(withId(R.id.cameraUIFragment)).check(matches(isDisplayed()))
    }

    @Test
    fun pressFeedMenuDisplayFeedFragment() {

        onView(withId(R.id.bottomMenuFeed))
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.feed_list)).check(matches(isDisplayed()))

        // Go back to camera to test restore outline version of feed menu icon
        // Hard to compare icon in test
        onView(withId(R.id.bottomMenuCamera))
            .perform(click())
    }

    /*
        This test passes locally but not on CI for no reason. CI doesn't explicitly say that the problem comes from
        this test but when its uncommented it works.
        Surprisingly, removing it doesn't affect the coverage locally at all.

        @Test
        fun pressFeedMenuDisplayFeedFragmentWithNonAuthUserDisplaysFeed() {

            runTest {

                // non authenticated user
                whenever(auth.getConnectedUserId()).thenReturn(null)

                onView(withId(R.id.bottomMenuFeed))
                    .check(matches(isDisplayed()))
                    .perform(click())

                onView(withId(R.id.feed_list)).check(matches(isDisplayed()))
            }
        }*/


    @Test
    fun pressFeedMenuDisplayFeedFragmentWithAuthUserWithFollowingsDisplaysFeed() {

        runTest {

            // For no reason, the init of a user with its followings and posts doesn't pass on CI.
            val userA = User(userIdA, 0)
            val userB = User(userId2, 12)
            val userC = User(userIdC, 10)

            userA.follow(userIdB)
            userA.follow(userIdC)
            userB.follow(userIdD)

            val trashPhotoMetadataB = TrashPhotoMetadata("BBB", takenBy = "B")

            userB.addPhotoMetadata(trashPhotoMetadataB)

            whenever(db.getUser(userIdA)).thenReturn(userA)
            whenever(db.getUser(userIdB)).thenReturn(userB)
            whenever(db.getUser(userIdC)).thenReturn(userC)
            whenever(db.getImage(trashPhotoMetadataB)).thenReturn(
                Bitmap.createBitmap(
                    120,
                    120,
                    Bitmap.Config.ARGB_8888
                )
            )

            // sign in userA. userA follows userB that has posts, and userC that doesn't have posts
            authUserFlow.emit(userIdA)

            onView(withId(R.id.bottomMenuFeed))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.feed_list)).check(matches(isDisplayed()))
        }
    }

    @Test
    fun pressFeedMenuDisplayFeedFragmentWithAuthUserWithoutFollowingsDisplaysFeed() {

        runTest {

            val userC = User(userIdC, 10)

            whenever(db.getUser(userIdC)).thenReturn(userC)

            // sign in user. userC has no followings
            authUserFlow.emit(userIdC)

            onView(withId(R.id.bottomMenuFeed))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.feed_list)).check(matches(isDisplayed()))
        }
    }

    @Test
    fun pressFeedMenuDisplayFeedFragmentWithAuthUserWithWrongFollowingsDisplaysFeed() {

        runTest {

            val userB = User(userId2, 12)

            userB.follow(userIdD)

            whenever(db.getUser(userIdB)).thenReturn(userB)
            // simulate not in db by returning a null user
            whenever(db.getUser(userIdD)).thenReturn(null)

            // sign in user. userB follows userD which doesn't exist in db
            authUserFlow.emit(userIdB)

            onView(withId(R.id.bottomMenuFeed))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.feed_list)).check(matches(isDisplayed()))
        }
    }

    @Test
    fun pressMapMenuDisplayMapFragment() {
        onView(withId(R.id.bottomMenuMap))
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.mapFragment)).check(matches(isDisplayed()))

        onView(withId(R.id.bottomMenuCamera))
            .perform(click())
    }

    @Test
    fun pressCameraMenuDisplayCameraFragment() {
        onView(withId(R.id.bottomMenuCamera))
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.cameraUIFragment)).check(matches(isDisplayed()))
    }

    @Test
    fun pressAdviceMenuDisplayAdviceFragment() {
        runTest {
            val advices = setOf("Advice1", "Advice2", "Advice3")
            whenever(db.getAdvices()).thenReturn(advices)
            onView(withId(R.id.bottomMenuAdvice))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.fragmentContainerView)).check(matches(isDisplayed()))

            onView(withId(R.id.bottomMenuCamera))
                .perform(click())
        }
    }

    @Test
    fun menuDrawerClosedByDefault() {
        onView(withId(R.id.mainDrawerLayout))
            .check(matches(DrawerMatchers.isClosed()))
    }

    @Test
    fun pressUserMenuOpenDrawer() {
        onView(withId(R.id.bottomMenuUser))
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.mainDrawerLayout))
            .check(matches(DrawerMatchers.isOpen(GravityCompat.END)))

        onView(withId(R.id.mainDrawerLayout))
            .perform(DrawerActions.close(GravityCompat.END))

        onView(withId(R.id.bottomMenuCamera))
            .perform(click())
    }

    @Test
    fun pressDrawerMenuProfileDisplayProfileDetailsFragment() {
        runTest {
            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawProfile))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.fragment_profile_details))
                .check(matches(isDisplayed()))
        }
    }


    @Test
    fun contactUsIsDisplayedInDrawerMenu() {
        runTest {
            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawContact))
                .check(matches(isDisplayed()))
                .perform(click())

            onView(withId(R.id.bottom_sheet_contact_us))
                .check(matches(isDisplayed()))
        }
    }

    @Test
    fun cancelButtonCorrectlyHidesTheContactUsWindow() {
        runTest {
            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawContact))
                .perform(scrollTo())
                .check(matches(isDisplayed()))
                .perform(click())

            // Click on the cancel button
            onView(withId(R.id.cancel_button)).check(matches(isDisplayed()))
                .perform(click())

            // Check that the contact us window was dismissed
            onView(withId(R.id.bottom_sheet_contact_us)).check(doesNotExist())
        }
    }

    @Test
    fun tryingToSubmitBlankFeedbackPrintError() {
        runTest {
            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawContact))
                .perform(scrollTo())
                .check(matches(isDisplayed()))
                .perform(click())

            // Enter a message into the message EditText
            onView(withId(R.id.message_edittext)).perform(typeText("  "), closeSoftKeyboard())

            // Check if the message EditText has the correct text
            onView(withId(R.id.message_edittext)).check(matches(withText("  ")))

            // Scroll to the Send button
            onView(withId(R.id.send_button))
                .check(matches(isDisplayed()))
                .perform(click())

            // Check that the error is correctly displayed
            onView(withId(R.id.message_edittext)).check(matches(hasErrorText("Enter a message")))

            // Check that the contact us window was dismissed
            onView(withId(R.id.bottom_sheet_contact_us)).check(matches(isDisplayed()))

        }
    }

    @Test
    fun contactUsMessageIsSentToDatabaseWithAddFeedback() {
        runTest {

            whenever(db.addFeedback(any(), any(), any()))
                .then {}

            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawContact))
                .perform(scrollTo())
                .check(matches(isDisplayed()))
                .perform(click())

            // Enter a message into the message EditText
            onView(withId(R.id.message_edittext)).perform(
                typeText("Test message 1"),
                closeSoftKeyboard()
            )

            // Check if the message EditText has the correct text
            onView(withId(R.id.message_edittext)).check(matches(withText("Test message 1")))

            onView(withId(R.id.send_button))
                .check(matches(isDisplayed()))
                .perform(click())

            // Check that the database function got called with the right arguments
            verify(db).addFeedback(eq("Test message 1"), eq(userId1), any())
        }
    }

    @Test
    fun contactUsMessageStillVisibleWhenWriteFails() {
        runTest {
            whenever(db.addFeedback(any(), any(), any()))
                .thenThrow(DatabaseException("error"))
            // sign in user
            authUserFlow.emit(userId1)

            // Open the navigation drawer
            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.mainNavDrawContact))
                .perform(scrollTo())
                .check(matches(isDisplayed()))
                .perform(click())

            // Enter a message into the message EditText
            onView(withId(R.id.message_edittext)).perform(
                typeText("Test message 2"),
                closeSoftKeyboard()
            )

            // Check if the message EditText has the correct text
            onView(withId(R.id.message_edittext)).check(matches(withText("Test message 2")))

            // Scroll to the Send button
            onView(withId(R.id.send_button))
                .check(matches(isDisplayed()))
                .perform(click())

            // Check that the contact us window was dismissed
            onView(withId(R.id.bottom_sheet_contact_us)).check(matches(isDisplayed()))

            // Check that the database function got called with the right arguments
            verify(db).addFeedback(eq("Test message 2"), eq(userId1), any())
        }
    }

    @Test
    fun pressDrawerMenuFollowersDisplayFollowersFragment() {
        onView(withId(R.id.mainDrawerLayout)).perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawFollowers))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())
    }

    @Test
    fun pressDrawerMenuFollowersDisplayFollowersFragmentWithNoAuthenticatedUser() {

        whenever(auth.getConnectedUserId()).thenReturn(null)

        onView(withId(R.id.mainDrawerLayout)).perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawFollowers))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())
    }

    @Test
    fun pressDrawerMenuUsersDisplayUserFragment() {
        onView(withId(R.id.mainDrawerLayout)).perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawUserList))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.user_fragment))
            .check(matches(isDisplayed()))
    }

    @Test
    fun pressDrawerMenuMeetingsDisplayMeetingFragment() {
        onView(withId(R.id.mainDrawerLayout)).perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawMeetings))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.fragment_meeting_list))
            .check(matches(isDisplayed()))
    }

    @Test
    fun pressDrawerMenuContestsDisplayContestsFragment() {
        onView(withId(R.id.mainDrawerLayout)).perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawContests))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.fragment_contests_list_container))
            .check(matches(isDisplayed()))
    }


    @Test
    fun pressDrawerMenuSettingsDisplaySettingsFragment() {
        onView(withId(R.id.mainDrawerLayout))
            .perform(DrawerActions.open(GravityCompat.END))

        onView(withId(R.id.mainNavDrawSettings))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())

        onView(withId(R.id.settingsFragment))
            .check(matches(isDisplayed()))
    }

    @Test
    fun pressDrawerMenuLogoutDisplaySignInActivity() {
        // mock the signOutCurrentUser
        activityRule.scenario.onActivity {
            whenever(auth.signOutCurrentUser(it, it.getString(R.string.default_web_client_id)))
                .thenReturn(Tasks.forResult(null))
        }
        Intents.init()
        // Open the navigation drawer
        onView(withId(R.id.mainDrawerLayout))
            .perform(DrawerActions.open(GravityCompat.END))

        // Click on the Logout button
        onView(withId(R.id.mainNavDrawLogout))
            .perform(scrollTo())
            .check(matches(isDisplayed()))
            .perform(click())

        // Verify that the SignInActivity is opened
        intended(hasComponent(SignInActivity::class.java.name))
        Intents.release()
    }

    @Test
    fun correctInfoDisplayedForAuthenticatedUser() {
        runTest {
            // sign in user
            authUserFlow.emit(userId1)

            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.nav_drawer_username_textview))
                .check(matches(withText(user1.displayName)))

            onView(withId(R.id.nav_drawer_description_textview))
                .check(matches(withText(user1.description)))


            activityRule.scenario.onActivity {
                val image =
                    it.findViewById<ImageView>(R.id.nav_drawer_profile_picture_imageview).drawable
                            as BitmapDrawable
                assertThat(image.bitmap, equalsBitmap(fakePicture1))
            }
        }
    }

    @Test
    fun defaultValueDisplayedForUnauthenticatedUser() {
        runTest {
            // simulate no authenticated user
            authUserFlow.emit(null)

            onView(withId(R.id.mainDrawerLayout))
                .perform(DrawerActions.open(GravityCompat.END))

            onView(withId(R.id.nav_drawer_username_textview))
                .check(matches(withText("Username")))

            onView(withId(R.id.nav_drawer_description_textview))
                .check(matches(withText("More Info on user")))


            activityRule.scenario.onActivity {
                val image =
